repair portfolio technologies wrapping

--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -1,15 +1,12 @@
 .portfolio {
     margin: 30px auto;
-
     & .container {
         justify-content: center;
     }
-
     &__title {
         flex-basis: 100%;
         text-align: center;
     }
-
     &__project {
         position: relative;
         display: flex;
@@ -19,62 +16,49 @@
         text-align: center;
         flex-basis: 100%;
         max-width: 500px;
-
         margin: 20px 20px;
-
         @include mq(tablet-large) {
             flex-basis: 45%;
         }
-
         @include mq(desktop-small) {
             flex-basis: 29%;
         }
-        
-        box-shadow: 0 3px 20px 0 rgba(0,0,0,.15);
+        box-shadow: 0 3px 20px 0 rgba(0, 0, 0, .15);
         border-radius: 20px;
-
         transition: transform .2s linear 0s;
-
         &:hover {
             overflow: hidden;
             transform: scale(1.02);
-            box-shadow: 0 1rem 3rem rgba(31,45,61,.125);
+            box-shadow: 0 1rem 3rem rgba(31, 45, 61, .125);
         }
-
         &:hover .portfolio__desc {
             opacity: 1;
             visibility: visible;
             top: 50%;
         }
     }
-    
     &__desc {
         padding: 30px 20px;
     }
-    
     &__project-title {
         font-size: 20px;
     }
-
     &__project-desc {
         font-size: 0.875rem;
         margin: 15px 0;
     }
-
     &__technologies-title {
         font-size: 1rem;
     }
-
     &__technologies-list {
         list-style: none;
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
     }
-
     &__technologies-item {
         margin: 10px 5px 0px;
         font-size: 0.875rem;
-
         &:before {
             font-family: "Font Awesome 5 Free";
             content: "\f0a9";
@@ -83,26 +67,21 @@
             margin-right: 5px;
         }
     }
-
     &__image {
         border-radius: 20px;
         max-width: 100%;
     }
-
     &__buttons {
         display: flex;
         justify-content: center;
         width: 100%;
         margin-bottom: 20px;
-
         & .btn {
             margin: auto 5px;
-
             & i {
                 color: $main-color;
                 margin-right: 5px;
             }
-
             &:hover i {
                 color: $color-white;
             }
